feat: Enhance landing page and API key handling
Updates the landing page title, description, and adds new CSS animations for a more dynamic visual experience. Refactors API key retrieval in `App.tsx` to robustly handle environment variables across different build tools (Vite, Webpack) and execution environments, ensuring a more reliable setup for users. Displays a user-friendly configuration error with a prompt to enter the API key if it's missing.

--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ChatBot Lounge</title>
+    <title>ChatBot - AI Social Hub</title>
+    <meta name="description" content="Join the ChatBot Lounge! Talk with AI, play multiplayer arcade games, and hang out in the voice lounge.">
     <script src="https://cdn.tailwindcss.com"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;900&display=swap" rel="stylesheet">
     <style>
       body {
         font-family: 'Inter', sans-serif;
@@ -26,8 +27,35 @@
       ::-webkit-scrollbar-thumb:hover {
         background: #ec4899; /* Pink 500 */
       }
-      .visualizer-bar {
-        transition: height 0.1s ease;
+      /* Animation Utilities */
+      @keyframes blob {
+        0% { transform: translate(0px, 0px) scale(1); }
+        33% { transform: translate(30px, -50px) scale(1.1); }
+        66% { transform: translate(-20px, 20px) scale(0.9); }
+        100% { transform: translate(0px, 0px) scale(1); }
+      }
+      .animate-blob {
+        animation: blob 7s infinite;
+      }
+      .animation-delay-2000 {
+        animation-delay: 2s;
+      }
+      .animation-delay-4000 {
+        animation-delay: 4s;
+      }
+      .animate-spin-slow {
+        animation: spin 8s linear infinite;
+      }
+      .animate-fade-in-up {
+        animation: fadeInUp 0.5s ease-out forwards;
+      }
+      @keyframes fadeInUp {
+        from { opacity: 0; transform: translateY(20px); }
+        to { opacity: 1; transform: translateY(0); }
+      }
+      @keyframes spin {
+        from { transform: rotate(0deg); }
+        to { transform: rotate(360deg); }
       }
     </style>
   <script type="importmap">
